source/objects/HistoricoCompras__c.object
<CustomObject>
    <fields>
        <fullName>CompraId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ID Compra</label>
        <referenceTo>Compra__c</referenceTo>
        <relationshipLabel>Historico_compras</relationshipLabel>
        <relationshipName>HistoricoCompras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DataCompraAnterior__c</fullName>
        <label>Data Compra Anterior</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProdutoId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nome do Produto</label>
        <referenceTo>Produto__c</referenceTo>
        <relationshipLabel>Historico_compras</relationshipLabel>
        <relationshipName>Historico_compras</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Historico Compra</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HIST_COMP-{0000}</displayFormat>
        <label>Historico Compras Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historico_compras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>